# navra

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DISCOVERY.md  Dockerfile.agent  Dockerfile.agent-full  Dockerfile.mcp-filesystem  MODELS.md  OPENSHELL.md  OPPORTUNITIES.md  PAPER.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  WHY-NAVRA.md  cliff.toml  config.schema.json  justfile  llms-full.txt  llms.txt  roadmap.json  test_upstream.py  test_upstream_ifc.py
benchmarks/: Cargo.toml
benchmarks/benches/: embedding_retrieval.rs  memory_temporal.rs  security_overhead.rs
mcpd-core/: Cargo.toml
mcpd-core/src/: a2a.rs  credentials.rs  identity.rs  ifc.rs  lib.rs  module.rs  process.rs  server.rs  session.rs  upstream.rs
mcpd-core/src/auth/: capability.rs  mod.rs
mcpd-core/src/hooks/: mod.rs  pipeline.rs  safety_hook.rs
mcpd-core/src/models/: mod.rs  onnx.rs
mcpd-core/src/notify/: mod.rs
mcpd-core/src/permissions/: acl.rs  approval.rs  mod.rs  tool_rules.rs
mcpd-core/src/protocol/: jsonrpc.rs  mcp.rs  mod.rs
mcpd-core/src/safety/: ml.rs  mod.rs  regex.rs
mcpd-core/src/transport/: mod.rs  streamable.rs
mcpd-core/src/upstream/: http.rs  mod.rs  sse.rs  stdio.rs  transport.rs
mcpd-core/tests/: bench_tokens.rs  security_eval.rs  upstream_integration.rs
mcpd-docs/: Cargo.toml
mcpd-docs/config/: default.toml
mcpd-docs/src/: config.rs  main.rs
mcpd-docs/src/index/: mod.rs  store.rs
mcpd-docs/src/permissions/: acl.rs  approval.rs  mod.rs
mcpd-docs/src/tools/: mod.rs
mcpd-docs/systemd/: mcpd-docs.service
mcpd-mod-docs/: Cargo.toml
mcpd-mod-docs/src/: lib.rs  store.rs  tools.rs  watcher.rs
mcpd-mod-git/: Cargo.toml
mcpd-mod-git/src/: lib.rs  tools.rs
mcpd-mod-voice/: Cargo.toml
mcpd-mod-voice/src/: tools.rs
mcpd-model/: Cargo.toml
mcpd-model/src/: lib.rs  onnx.rs  openai.rs
mcpd-server/: Cargo.toml
mcpd-server/src/: config.rs  discover.rs  main.rs  mdns.rs  tray.rs
mcpd-server/systemd/: mcpd.service  mcpd.socket
myelix-agent/: Cargo.toml
myelix-agent/src/: agent.rs  client.rs  convert.rs  error.rs  lib.rs  tool_loop.rs
myelix-cognitive/: Cargo.toml
myelix-cognitive/src/: budget.rs  error.rs  evolution.rs  forge.rs  lib.rs  types.rs  weaver.rs
myelix-cognitive/tests/: load_cognitive_core.rs
myelix-flow/: Cargo.toml
myelix-flow/src/: backedge.rs  blackboard.rs  builder.rs  dag.rs  definition.rs  engine.rs  error.rs  executor.rs  handoff.rs  iterative.rs  lib.rs  mailbox.rs  mesh_tools.rs  task.rs  validation.rs  yaml_loader.rs
myelix-flow/tests/: mesh_integration.rs
myelix-memory/: Cargo.toml
myelix-memory/src/: audit.rs  knowledge.rs  lib.rs  pipeline.rs  retrieval.rs  session_store.rs  types.rs
myelix-modal-voice/: Cargo.toml
myelix-modal-voice/src/: audio.rs  lib.rs  tools.rs
myelix-model-runtime/: Cargo.toml
myelix-model-runtime/src/: direct.rs  error.rs  gpu.rs  podman.rs
myelix-server/: Cargo.toml
myelix-server/config/: default.toml
myelix-server/src/: audit_bridge.rs  cli.rs  config.rs  demo.rs  flow_tools.rs  main.rs  memory_tools.rs  team_tools.rs  tray.rs  ui.rs
myelix-server/tests/: e2e.rs
myelix-server/ui/: app.js  index.html  style.css
myelix-tools-docs/: Cargo.toml
myelix-tools-docs/src/: store.rs  tools.rs  watcher.rs
myelix-tools-git/: Cargo.toml
myelix-tools-git/src/: tools.rs
navra-agent/: Cargo.toml  README.md
navra-agent/src/: action.rs  agent.rs  audit.rs  block.rs  client.rs  convert.rs  error.rs  hibernate.rs  lib.rs  quota.rs  replay.rs  resolve.rs  tool_loop.rs  trace.rs
navra-agent/tests/: integration.rs
navra-auth/: Cargo.toml
navra-auth/src/: credentials.rs  execution_ring.rs  identity.rs  lib.rs  manifest.rs  process.rs  quota.rs  tool_scanner.rs  trust_score.rs
navra-auth/src/auth/: capability.rs  chain.rs  idjag.rs  mod.rs  oauth.rs  oauth_client.rs  openshell.rs  sandbox_profile.rs
navra-auth/src/ifc/: benchmark.rs  corpus.rs  mod.rs  value_store.rs  witness.rs
navra-auth/src/notify/: dbus.rs
navra-auth/src/permissions/: acl.rs  cedar.rs  disclosure.rs  dmn.rs  domain_rules.rs  mod.rs  resource_class.rs  (+3 more)
navra-auth/tests/: ifc_benchmark.rs
navra-cognitive/: Cargo.toml  README.md
navra-cognitive/src/: bridge.rs  budget.rs  evolution.rs  fast_path.rs  forge.rs  lib.rs  skill_lifecycle.rs  types.rs  weaver.rs
navra-cognitive/tests/: load_cognitive_core.rs
navra-core/: Cargo.toml  README.md  build.rs
navra-core/proto/: module.proto
navra-core/src/: blackbox.rs  grpc_module.rs  lib.rs  metrics.rs  module.rs  session.rs  upstream_module.rs
navra-core/tests/: bench_tokens.rs  ifc_integration.rs  security_eval.rs  upstream_integration.rs
navra-flow/: Cargo.toml  README.md
navra-flow/src/: backedge.rs  blackboard.rs  bpmn.rs  builder.rs  causal_graph.rs  checkpoint.rs  dag.rs  definition.rs  engine.rs  error.rs  eval.rs  event_log.rs  executor.rs  handoff.rs  iterative.rs  lib.rs  mailbox.rs  mesh.rs  mesh_tools.rs  recovery.rs  sdb.rs  task.rs  verification.rs  yaml_loader.rs
navra-flow/tests/: mesh_integration.rs
navra-macros/: Cargo.toml  README.md
navra-macros/src/: lib.rs
navra-macros/tests/: basic.rs
navra-mcp/: Cargo.toml
navra-mcp/src/: lib.rs
navra-memory/: Cargo.toml  README.md
navra-memory/src/: audit.rs  decay.rs  entity_graph.rs  error.rs  knowledge.rs  lib.rs  pipeline.rs  retrieval.rs  session_store.rs  temporal.rs  tools.rs  types.rs  working.rs
navra-modal-vision/: Cargo.toml  README.md
navra-modal-vision/src/: actor.rs  lib.rs  screenshot.rs  tools.rs
navra-modal-voice/: Cargo.toml  README.md
navra-modal-voice/src/: lib.rs  tools.rs
navra-modal-voice/tests/: integration.rs
navra-model-hub/: Cargo.toml  README.md
navra-model-hub/src/: cache.rs  card.rs  error.rs  lib.rs  uri.rs
navra-model-runtime/: Cargo.toml  README.md  build.rs
navra-model-runtime/src/: direct.rs  embedded.rs  engine.rs  error.rs  format.rs  gpu.rs  hardware.rs  kubernetes.rs  lib.rs  openshell.rs  podman.rs
(+1395 files in other folders)
