[workspace]
resolver = "2"
members = [
    "myelix-protocol",
    "myelix-model",
    "myelix-model-hub",
    "myelix-model-runtime",
    "myelix-security",
    "myelix-core",
    "myelix-tools-docs",
    "myelix-tools-git",
    "myelix-rag",
    "myelix-modal-voice",
    "myelix-modal-vision",
    "myelix-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
rust-version = "1.75"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
hyper = "1"
hyper-util = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
ciborium = "0.2"
base64 = "0.22"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
