[workspace]
resolver = "2"
members = [
    "navra-protocol",
    "navra-model",
    "navra-model-hub",
    "navra-model-runtime",
    "navra-auth",
    "navra-safety",
    "navra-safety-hooks",
    "navra-security",
    "navra-cognitive",
    "navra-memory",
    "navra-agent",
    "navra-flow",
    "navra-core",
    "navra-rag",
    "navra-modal-voice",
    "navra-modal-vision",
    "navra-responses",
    "navra-macros",
    "navra-mcp",
    "navra-openapi",
    "navra-server",
    "benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.91"
homepage = "https://github.com/smgglrs-ai/navra"
repository = "https://github.com/smgglrs-ai/navra"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
hyper = "1"
hyper-util = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart", "native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
ciborium = "0.2"
base64 = "0.22"
jsonwebtoken = "9"
oauth2 = "5"
url = "2"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
tonic = "0.12"
prost = "0.13"
schemars = "1.0"
rmcp = { path = "../../modelcontextprotocol/rust-sdk/crates/rmcp", features = [
    "server",
    "client",
    "macros",
    "schemars",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "reqwest-native-tls",
] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.container]
inherits = "release"
lto = true
codegen-units = 1
strip = true
panic = "abort"
