[workspace]
resolver = "2"
members = [
    "navra-protocol",
    "navra-model",
    "navra-model-hub",
    "navra-model-runtime",
    "navra-auth",
    "navra-safety",
    "navra-safety-hooks",
    "navra-security",
    "navra-cognitive",
    "navra-memory",
    "navra-agent",
    "navra-flow",
    "navra-core",
    "navra-rag",
    "navra-modal-voice",
    "navra-modal-vision",
    "navra-responses",
    "navra-macros",
    "navra-mcp",
    "navra-openapi",
    "navra-model-server",
    "navra-server",
    "benchmarks",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96"
homepage = "https://github.com/smgglrs-ai/navra"
repository = "https://github.com/smgglrs-ai/navra"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
hyper = "1"
hyper-util = "0.1"
reqwest = { version = "0.13", features = ["json", "multipart", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
blake3 = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
ciborium = "0.2"
base64 = "0.22"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
oauth2 = { version = "5", default-features = false }
url = "2"
keyring = "4"
tonic = "0.14"
prost = "0.14"
schemars = "1.2"
rmcp = { version = "1.8", features = [
    "server",
    "client",
    "macros",
    "schemars",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
rusqlite = { version = "0.40", features = ["bundled"] }
vstd = { version = "0.0.0-2026-06-14-0213", default-features = false }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(verus_keep_ghost)', 'cfg(verus_keep_ghost_body)'] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.container]
inherits = "release"
panic = "abort"
