[package]
name = "smgglrs-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
smgglrs-security = { path = "../smgglrs-security" }
smgglrs-core = { path = "../smgglrs-core" }
smgglrs-model = { path = "../smgglrs-model" }
smgglrs-cognitive = { path = "../smgglrs-cognitive" }
smgglrs-responses = { path = "../smgglrs-responses" }
smgglrs-memory = { path = "../smgglrs-memory" }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bench]]
name = "security_overhead"
harness = false

[[bench]]
name = "memory_temporal"
harness = false
