[package]
name = "navra-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
navra-auth = { path = "../navra-auth" }
navra-safety-hooks = { path = "../navra-safety-hooks" }
navra-core = { path = "../navra-core" }
navra-model = { path = "../navra-model" }
navra-cognitive = { path = "../navra-cognitive" }
navra-responses = { path = "../navra-responses" }
navra-memory = { path = "../navra-memory" }
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bench]]
name = "security_overhead"
harness = false

[[bench]]
name = "memory_temporal"
harness = false
