[package]
name = "mcpd-core"
description = "Lightweight MCP server framework for Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
bs58 = { workspace = true }
ciborium = { workspace = true }
base64 = { workspace = true }
keyring = { workspace = true }
rand = "0.8"
glob = "0.3"
dirs = "6"
zbus = { version = "5", default-features = false, features = ["tokio"] }
futures-util = "0.3"
regex-lite = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
