[package]
name = "mcpd-docs"
description = "Secure MCP document server with rich permissions"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcpd-core = { path = "../mcpd-core" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
notify = "7"
glob = "0.3"
dirs = "6"
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
