[package]
name = "mcpd-mod-docs"
description = "Document management module for mcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcpd-core = { path = "../mcpd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
notify = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
