[package]
name = "mcpd-mod-git"
description = "Git module for mcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcpd-core = { path = "../mcpd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = "6"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
