[package]
name = "mcpd-mod-voice"
description = "Voice I/O module for mcpd (ASR + TTS)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcpd-core = { path = "../mcpd-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
cpal = "0.15"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
