[package]
name = "mcpd-model"
description = "Model backend implementations for mcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mcpd-core = { path = "../mcpd-core" }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["ndarray", "std"] }
ndarray = "0.17"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
