[package]
name = "mcpd"
description = "Composable MCP server with modular architecture"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "mcpd"
path = "src/main.rs"

[dependencies]
mcpd-core = { path = "../mcpd-core" }
mcpd-mod-docs = { path = "../mcpd-mod-docs" }
mcpd-mod-git = { path = "../mcpd-mod-git" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
toml = "0.8"
reqwest = { workspace = true, features = ["stream"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
ksni = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
