[package]
name = "myelix-flow"
description = "Declarative multi-agent flow engine with handoff-based routing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
myelix-agent = { path = "../myelix-agent" }
myelix-protocol = { path = "../myelix-protocol" }
myelix-model = { path = "../myelix-model" }
myelix-security = { path = "../myelix-security" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"

[dev-dependencies]
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
