[package]
name = "myelix-tools-docs"
description = "Document management module for mcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
myelix-core = { path = "../myelix-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.6-alpha.2"
zerocopy = { version = "0.8", features = ["derive"] }
dirs = "6"
notify = "7"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
