[package]
name = "myelix-tools-git"
description = "Git module for mcpd"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
myelix-core = { path = "../myelix-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = "6"
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
