[package]
name = "navra-agent"
description = "SDK for building AI agents that connect to MCP servers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "navra-agent"
path = "src/bin/agent.rs"

[features]
default = ["onnx"]
onnx = ["navra-model/onnx", "navra-safety/onnx"]
rustls = ["navra-model/rustls", "navra-protocol/rustls"]
container = ["rustls"]

[dependencies]
navra-protocol = { path = "../navra-protocol" }
navra-model = { path = "../navra-model", default-features = false }
navra-auth = { path = "../navra-auth" }
navra-safety = { path = "../navra-safety", default-features = false }
navra-cognitive = { path = "../navra-cognitive" }
chrono = "0.4"
regex-lite = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
navra-responses = { path = "../navra-responses" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
serde_yaml = "0.9"
