[package]
name = "navra-agent"
description = "SDK for building AI agents that connect to MCP servers"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "navra-agent"
path = "src/bin/agent.rs"

[package.metadata.binstall]
pkg-fmt = "tgz"
bin-dir = "navra-agent{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/navra-agent-v{ version }-linux-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/navra-agent-v{ version }-linux-aarch64.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/navra-agent-v{ version }-darwin-x86_64.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/navra-agent-v{ version }-darwin-aarch64.tar.gz"

[features]
default = ["onnx"]
onnx = ["navra-model/onnx", "navra-safety-hooks/onnx"]
container = []

[dependencies]
navra-protocol = { path = "../navra-protocol", default-features = false }
navra-model = { path = "../navra-model", default-features = false }
navra-auth = { path = "../navra-auth", default-features = false }
navra-safety-hooks = { path = "../navra-safety-hooks", default-features = false }
navra-cognitive = { path = "../navra-cognitive" }
rmcp = { workspace = true }
chrono = "0.4"
regex-lite = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
vstd = { workspace = true }

[package.metadata.verus]
verify = true

[dev-dependencies]
navra-responses = { path = "../navra-responses" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
serde_yaml = "0.9"

[lints]
workspace = true
