[package]
name = "navra-auth"
description = "Authentication, authorization, identity, and permission primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-protocol = { path = "../navra-protocol" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
keyring = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
glob = "0.3"
dirs = "6"
rand = "0.8"
regex-lite = "0.1"
ureq = { version = "3", features = ["json"] }
futures-util = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"] }
cedar-policy = { version = "4", optional = true }
sha2 = "0.10"
hex = "0.4"

[features]
cedar = ["dep:cedar-policy"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
