[package]
name = "navra-auth"
description = "Authentication, authorization, identity, and permission primitives"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-protocol = { path = "../navra-protocol" }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
ed25519-dalek = { workspace = true }
keyring = { workspace = true, optional = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
glob = "0.3"
dirs = "6"
rand = "0.8"
regex-lite = "0.1"
ureq = { version = "3", features = ["json"] }
futures-util = "0.3"
zbus = { version = "5", default-features = false, features = ["tokio"], optional = true }
cedar-policy = { version = "4", optional = true }
dsntk-model = "0.3"
dsntk-model-evaluator = "0.3"
dsntk-feel = "0.3"
sha2 = "0.10"
subtle = "2"
zeroize = "1"
hex = "0.4"
oauth2-reqwest = "0.1.0-alpha.3"
vstd = { workspace = true }

[package.metadata.verus]
verify = true

[features]
default = ["desktop"]
desktop = ["dep:keyring", "dep:zbus"]
cedar = ["dep:cedar-policy"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"

[lints]
workspace = true
