[package]
name = "navra-cognitive"
description = "Cognitive core: YAML persona/directive/heuristic loader and prompt weaver"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hex = "0.4"
navra-protocol = { path = "../navra-protocol" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = { workspace = true }
tracing = { workspace = true }
vstd = { workspace = true }

[package.metadata.verus]
verify = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
