[package]
name = "navra-core"
description = "MCP gateway core: server, module trait, session, transport"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-protocol = { path = "../navra-protocol", features = ["native-tls"] }
navra-auth = { path = "../navra-auth", features = ["desktop"] }
navra-safety-hooks = { path = "../navra-safety-hooks" }
navra-model = { path = "../navra-model", features = ["native-tls"] }
async-trait = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
async-stream = "0.3"
futures-util = "0.3"
dashmap = "6"
glob = "0.3"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
base64 = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = "0.1"

[features]
cedar = ["navra-auth/cedar"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = { workspace = true }
reqwest = { workspace = true }
