[package]
name = "navra-core"
description = "MCP gateway core: server, module trait, session, transport"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-mcp = { path = "../navra-mcp", default-features = false }
navra-protocol = { path = "../navra-protocol" }
navra-auth = { path = "../navra-auth", features = ["desktop"] }
navra-safety-hooks = { path = "../navra-safety-hooks", default-features = false }
navra-model = { path = "../navra-model", default-features = false, features = ["native-tls"] }
rmcp = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
futures-util = "0.3"
dashmap = "6"
glob = "0.3"
hex = "0.4"
rusqlite = { workspace = true }
sha2 = "0.10"
base64 = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = "0.1"

[features]
default = ["onnx"]
onnx = ["navra-safety-hooks/onnx", "navra-model/onnx", "navra-mcp/onnx"]
cedar = ["navra-auth/cedar"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
base64 = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
