[package]
name = "navra-flow"
description = "Declarative multi-agent flow engine with handoff-based routing"
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
navra-agent = { path = "../navra-agent", default-features = false }
rmcp = { workspace = true }
navra-cognitive = { path = "../navra-cognitive" }
navra-protocol = { path = "../navra-protocol" }
navra-model = { path = "../navra-model", default-features = false }
navra-auth = { path = "../navra-auth" }
navra-safety-hooks = { path = "../navra-safety-hooks", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
serde_yaml = "0.9"
rusqlite = { workspace = true }

[features]
default = ["onnx"]
onnx = ["navra-model/onnx", "navra-safety-hooks/onnx", "navra-agent/onnx"]

[dev-dependencies]
navra-responses = { path = "../navra-responses" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
