[package]
name = "navra-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
navra-protocol = { path = "../navra-protocol" }
navra-security = { path = "../navra-security" }
navra-core = { path = "../navra-core" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
trybuild = "1"
