[package]
name = "navra-macros"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.91"
description = "Proc macros for defining MCP tools with the navra gateway"
homepage.workspace = true
repository.workspace = true
keywords = ["mcp", "tool", "proc-macro", "gateway"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
navra-protocol = { path = "../navra-protocol" }
navra-mcp = { path = "../navra-mcp" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
trybuild = "1"
