[package]
name = "navra-memory"
description = "Persistent agent memory: working memory (conversation turns) and knowledge store (FTS5)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
rag = ["navra-rag"]

[dependencies]
navra-mcp = { path = "../navra-mcp" }
navra-protocol = { path = "../navra-protocol" }
navra-core = { path = "../navra-core" }
navra-model = { path = "../navra-model" }
navra-macros = { path = "../navra-macros" }
navra-rag = { path = "../navra-rag", optional = true }
chrono = "0.4"
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
